<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="163dp"
        android:layout_height="89dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="124dp"
        android:text="@string/email"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUsername"
        android:layout_width="163dp"
        android:layout_height="89dp"
        android:layout_marginStart="124dp"
        android:background="@color/purple_500"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.586" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="107sp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="288dp"
        android:layout_height="31dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="196dp"
        android:text="@string/join_now"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEmail"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
