<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <EditText
        android:id="@+id/etusername"
        android:layout_width="281dp"
        android:layout_height="58dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usrnm_edit"
        android:inputType="textPersonName"
        android:textColor="@color/purple_500"
        android:textColorHint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="288dp"
        android:layout_height="66dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="360dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etusername"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="113dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/attempts"
        android:layout_width="323dp"
        android:layout_height="37dp"
        android:text="@string/number_of_remaining_attempts"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.476" />
</androidx.constraintlayout.widget.ConstraintLayout>